fixing navigation bar alignment, adjusting container widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,12 @@
 
 html {
     position: relative;
-    min-height: 100%
-
+    min-height: 100%;
+    margin: 0px;
+    background-image: url(../images/weather.png);
+    background-size: cover;
+    background-attachment: fixed;
+    background-color: maroon;
 }
 
 header {
@@ -14,41 +18,37 @@ header {
     position: fixed;
     top: 0;
     right: 0;
+    border-bottom: 1px solid lightgrey;
 }
 
 h1 {
     float: left;
     font-size: 24px;
     color: white;
-    padding: 10px; 
+    padding: 30px; 
     background-color: #4aaaa5;
     margin-left: 100px;
+    font-weight: bold;
 }
 
 ul {
     text-align: right;
     list-style-type: none;
     margin-right: 100px;
-    padding: 20px;
+    margin-top: 30px;
+    color: gray; 
+    font-size: 12px;
    
 }
 
 li {
     display: inline;
-}
-
-body {
-    background-image: url(../images/weather.png);
-    background-size: cover;
-    background-repeat: repeat;
-    background-color: maroon;
+    text-align: center;
 }
 
 div {
     background-color: white;
-    margin-top: 150px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 150px 100px 150px 100px;
     clear: both;
     overflow: auto;
 }
@@ -57,10 +57,12 @@ h2 {
     color: #4aaaa5;
     padding: 10px;
     margin: 10px;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 hr {
-    border: 1px solid gray;  
+    border: 1px solid lightgrey;  
     margin: 15px;  
 }
 
@@ -83,6 +85,33 @@ a:link {
     text-decoration: none;
     font-size: 18px;
     color: gray;
+    padding: 5px;
+
+}
+
+a:hover {
+    font-size: 24px;
+    font-weight: bold;
+    color: gray;
+    padding: 10px;
+}
+
+a:visited {
+        text-decoration: none;
+        font-size: 18px;
+        color: gray;
+        padding: 5px;
+    }
+a:active {
+    font-size: 24px;
+    font-weight: bold;
+    color: orange;
+    padding: 10px;
+
+}
+
+label {
+    color: gray;
 }
 
 .clearfix::after {
@@ -98,16 +127,21 @@ img {
     margin: 15px;
 }
 
-#profilecontainer {
-    margin-left: 100px;
+#profile-container {
+    margin: 150px auto;
     width: 960px;
 }
+
 
 #profile {
     font-size: 16px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 2.0;
     margin: 15px;
+}
+
+#portfolio-container {
+    height: 700px;
 }
 
 form {
@@ -121,6 +155,14 @@ input, textarea {
 }
 
 button {
-    padding: 20px;
+    padding: 10px 20px 10px 20px;
+    font-size: 12px;
     background: #4aaaa5;
+    color: white;
 }
+
+.sideborder {
+    border-right: 1px inset lightgray;
+    padding-right: 2px;
+}
+
